--- a/sdj/index.html
+++ b/sdj/index.html
@@ -38,6 +38,7 @@
 
       <!--第二屏-->
       <div class="swiper-slide two">
+        <div class="top">
         <img src="img/bg1.jpg" class="bg1 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="2s" swiper-animate-delay="1.5s"/>
         <img src="img/bg2.jpg" class="bg2 ani" swiper-animate-effect=" flipInY" swiper-animate-duration="2s" swiper-animate-delay="3s"/>
         <img src="img/bg3.jpg" class="bg3 ani" swiper-animate-effect="fadeInDownBig" swiper-animate-duration="2s" swiper-animate-delay="4.5s"/>
@@ -47,6 +48,7 @@
         <img src="img/bg8.jpg" class="bg8 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="2s" swiper-animate-delay="15s"/>
         <img src="img/bg9.jpg" class="bg9 ani" swiper-animate-effect="flipInY" swiper-animate-duration="2s" swiper-animate-delay="12s"/>
         <img src="img/bg5.jpg" class="bg5 ani" swiper-animate-effect="zoomIn" swiper-animate-duration="2s" swiper-animate-delay="12.5s"/>
+        </div>
       </div>
 
 
